--- a/templates/add_record.html
+++ b/templates/add_record.html
@@ -42,6 +42,12 @@
 
     <button type="submit" class="btn btn-primary">Save</button>
 </form>
+    {% if error %}
+<div class="alert alert-danger">
+    {{ error }}
+</div>
+{% endif %}
+
 <script>
     // Enable Bootstrap form validation
     (function () {
